# system-dev-coding-interview

./: .gitignore  LICENSE  README.md
.github/workflows/: fastapi-sample.yaml
exercises/01-fastapi-sample/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  submit.sh
exercises/01-fastapi-sample/.integration/: conftest.py  test_integration.py
exercises/01-fastapi-sample/.integration/helpers/assertions/: __init__.py  item.py  user.py
exercises/01-fastapi-sample/.integration/helpers/crud/: __init__.py  item.py
exercises/01-fastapi-sample/sql_app/: crud.py  database.py  main.py  models.py  schemas.py
exercises/01-fastapi-sample/sql_app/tests/: conftest.py  test_api.py
manage/: receive.sh
