[project]
name = "sql-app"
version = "0.1.0"
description = ""
authors = [{ name = "ABEJA Inc.", email = "dev@abejainc.com" }]
requires-python = ">=3.8,<3.9"
dependencies = [
    "fastapi>=0.124.0,<0.125",
    "uvicorn[standard]>=0.33.0,<0.34",
    "python-jose[cryptography]>=3.4.0,<3.5",
    "sqlalchemy>=2.0.18,<3",
    "bcrypt>=4.1.2,<5",
    "PyYAML==6.0.3",
    "pwdlib[bcrypt]==0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=7.1.2,<8",
    "requests>=2.27.1,<3",
    "ruff>=0.0.277,<0.0.278",
    "black>=23.3.0,<24",
    "mypy>=1.4.1,<2",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]
target-version = "py38"

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.uv]
package = false
