[project]
name = "sql-app"
version = "0.1.0"
description = ""
authors = [{ name = "ABEJA Inc.", email = "dev@abejainc.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.15"

dependencies = [
    "bcrypt>=5.0.0,<6",
    "fastapi>=0.124.4,<0.125",
    "pwdlib[bcrypt]>=0.3.0,<0.4",
    "python-jose[cryptography]>=3.5.0,<3.6",
    "sqlalchemy>=2.0.45,<2.1",
    "uvicorn[standard]>=0.38.0,<0.39",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pytest>=9.0.2,<10",
    "ruff>=0.14.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
]

lint.ignore = [
    "B008", # do not perform function calls in argument defaults
]
target-version = "py313"

[tool.mypy]
python_version = 3.13
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
